feat(roadmap): add the Changelog feature to track changes for API, events etc
