# rover-server/internal/server/changelog_server.go
@@ -1,0 +1,67 @@
+// Copyright 2025 Deutsche Telekom IT GmbH
+//
+// SPDX-License-Identifier: Apache-2.0
+
+package server
+
+import (
+	"net/http"
+
+	"github.com/gofiber/fiber/v2"
+	"github.com/telekom/controlplane/common-server/pkg/problems"
+	"github.com/telekom/controlplane/common-server/pkg/server"
+
+	"github.com/telekom/controlplane/rover-server/internal/api"
+)
+
+func (s *Server) GetAllChangelogs(c *fiber.Ctx) error {
+	var params api.GetAllChangelogsParams
+	if err := c.QueryParser(&params); err != nil {
+		return server.ReturnWithProblem(c, problems.BadRequest("invalid query parameters"), err)
+	}
+	res, err := s.Changelogs.GetAll(c.UserContext(), params)
+	if err != nil {
+		return server.ReturnWithProblem(c, nil, err)
+	}
+
+	res.UnderscoreLinks.Self = buildCursorUrl(c.BaseURL(), c.Path(), res.UnderscoreLinks.Self)
+	if res.UnderscoreLinks.Next != "" {
+		res.UnderscoreLinks.Next = buildCursorUrl(c.BaseURL(), c.Path(), res.UnderscoreLinks.Next)
+	}
+
+	return c.JSON(res)
+}
+
+func (s *Server) GetChangelog(c *fiber.Ctx) error {
+	resourceId := c.Params("resourceId")
+	res, err := s.Changelogs.Get(c.UserContext(), resourceId)
+	if err != nil {
+		return server.ReturnWithProblem(c, nil, err)
+	}
+
+	return c.JSON(res)
+}
+
+func (s *Server) UpdateChangelog(c *fiber.Ctx) error {
+	resourceId := c.Params("resourceId")
+	var req api.ChangelogRequest
+	if err := c.BodyParser(&req); err != nil {
+		return server.ReturnWithProblem(c, problems.BadRequest("invalid request body"), err)
+	}
+
+	res, err := s.Changelogs.Update(c.UserContext(), resourceId, req)
+	if err != nil {
+		return server.ReturnWithProblem(c, nil, err)
+	}
+
+	return c.Status(http.StatusOK).JSON(res)
+}
+
+func (s *Server) DeleteChangelog(c *fiber.Ctx) error {
+	resourceId := c.Params("resourceId")
+	if err := s.Changelogs.Delete(c.UserContext(), resourceId); err != nil {
+		return server.ReturnWithProblem(c, nil, err)
+	}
+
+	return c.SendStatus(http.StatusNoContent)
+}
