# rover/api/v1/zz_generated.deepcopy.go
@@ -215,6 +215,117 @@ func (in *BasicAuthCredentials) DeepCopy() *BasicAuthCredentials {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Changelog) DeepCopyInto(out *Changelog) {
+	*out = *in
+	out.TypeMeta = in.TypeMeta
+	in.ObjectMeta.DeepCopyInto(&out.ObjectMeta)
+	out.Spec = in.Spec
+	in.Status.DeepCopyInto(&out.Status)
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Changelog.
+func (in *Changelog) DeepCopy() *Changelog {
+	if in == nil {
+		return nil
+	}
+	out := new(Changelog)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyObject is an autogenerated deepcopy function, copying the receiver, creating a new runtime.Object.
+func (in *Changelog) DeepCopyObject() runtime.Object {
+	if c := in.DeepCopy(); c != nil {
+		return c
+	}
+	return nil
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ChangelogItem) DeepCopyInto(out *ChangelogItem) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ChangelogItem.
+func (in *ChangelogItem) DeepCopy() *ChangelogItem {
+	if in == nil {
+		return nil
+	}
+	out := new(ChangelogItem)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ChangelogList) DeepCopyInto(out *ChangelogList) {
+	*out = *in
+	out.TypeMeta = in.TypeMeta
+	in.ListMeta.DeepCopyInto(&out.ListMeta)
+	if in.Items != nil {
+		in, out := &in.Items, &out.Items
+		*out = make([]Changelog, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ChangelogList.
+func (in *ChangelogList) DeepCopy() *ChangelogList {
+	if in == nil {
+		return nil
+	}
+	out := new(ChangelogList)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyObject is an autogenerated deepcopy function, copying the receiver, creating a new runtime.Object.
+func (in *ChangelogList) DeepCopyObject() runtime.Object {
+	if c := in.DeepCopy(); c != nil {
+		return c
+	}
+	return nil
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ChangelogSpec) DeepCopyInto(out *ChangelogSpec) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ChangelogSpec.
+func (in *ChangelogSpec) DeepCopy() *ChangelogSpec {
+	if in == nil {
+		return nil
+	}
+	out := new(ChangelogSpec)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *ChangelogStatus) DeepCopyInto(out *ChangelogStatus) {
+	*out = *in
+	if in.Conditions != nil {
+		in, out := &in.Conditions, &out.Conditions
+		*out = make([]metav1.Condition, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new ChangelogStatus.
+func (in *ChangelogStatus) DeepCopy() *ChangelogStatus {
+	if in == nil {
+		return nil
+	}
+	out := new(ChangelogStatus)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *CircuitBreaker) DeepCopyInto(out *CircuitBreaker) {
 	*out = *in
 }
