# rover/internal/controller/changelog_controller.go
@@ -1,0 +1,50 @@
+// Copyright 2025 Deutsche Telekom IT GmbH
+//
+// SPDX-License-Identifier: Apache-2.0
+
+package controller
+
+import (
+	"context"
+
+	cconfig "github.com/telekom/controlplane/common/pkg/config"
+	cc "github.com/telekom/controlplane/common/pkg/controller"
+	"k8s.io/apimachinery/pkg/runtime"
+	"k8s.io/client-go/tools/record"
+	ctrl "sigs.k8s.io/controller-runtime"
+	"sigs.k8s.io/controller-runtime/pkg/client"
+	"sigs.k8s.io/controller-runtime/pkg/controller"
+
+	rover "github.com/telekom/controlplane/rover/api/v1"
+	changelog_handler "github.com/telekom/controlplane/rover/internal/handler/changelog"
+)
+
+type ChangelogReconciler struct {
+	client.Client
+	Scheme   *runtime.Scheme
+	Recorder record.EventRecorder
+
+	cc.Controller[*rover.Changelog]
+}
+
+// +kubebuilder:rbac:groups=core,resources=events,verbs=create;patch
+// +kubebuilder:rbac:groups=rover.cp.ei.telekom.de,resources=changelogs,verbs=get;list;watch;create;update;patch;delete
+// +kubebuilder:rbac:groups=rover.cp.ei.telekom.de,resources=changelogs/status,verbs=get;update;patch
+// +kubebuilder:rbac:groups=rover.cp.ei.telekom.de,resources=changelogs/finalizers,verbs=update
+
+func (r *ChangelogReconciler) Reconcile(ctx context.Context, req ctrl.Request) (ctrl.Result, error) {
+	return r.Controller.Reconcile(ctx, req, &rover.Changelog{})
+}
+
+func (r *ChangelogReconciler) SetupWithManager(mgr ctrl.Manager) error {
+	r.Recorder = mgr.GetEventRecorderFor("changelog-controller")
+	r.Controller = cc.NewController(&changelog_handler.ChangelogHandler{}, r.Client, r.Recorder)
+
+	return ctrl.NewControllerManagedBy(mgr).
+		For(&rover.Changelog{}).
+		WithOptions(controller.Options{
+			MaxConcurrentReconciles: cconfig.MaxConcurrentReconciles,
+			RateLimiter:             cc.NewRateLimiter(),
+		}).
+		Complete(r)
+}
